--- a/static/global.css
+++ b/static/global.css
@@ -1,12 +1,17 @@
 * {
   box-sizing: border-box;
 }
+
+html {
+  min-height: 100vh;
+}
 body {
 	margin: 0;
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	font-size: 14px;
 	line-height: 1.5;
-	color: #333;
+  color: #333;
+  height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -30,6 +35,23 @@ code {
 	background-color: #f0f0f0;
 	padding: 0.2em 0.4em;
 	border-radius: 2px;
+}
+
+
+.pcr-app.chat-color-picker  {
+  width: auto;
+  left: 2.5vw;
+  & .pcr-swatches {
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(1.75em, auto));
+  }
+  & .pcr-interaction {
+    flex-wrap: nowrap;
+  }
+  & input:not([type=checkbox]):not([type=radio]):not([type=submit]), select {
+    padding: .5rem;
+  }
 }
 
 @media (min-width: 400px) {
