Working on some UI/CSS for chatroom list

--- a/static/raster2.css
+++ b/static/raster2.css
@@ -14,8 +14,8 @@
   --h2-size: 2.2rem;
   --h3-size: 1.4rem;
   --h4-size: 1.1rem;
-  --columnGap: calc(var(--lineHeight) * 2);
-  --rowGap: var(--lineHeight);
+   --columnGap: 0; /* calc(var(--lineHeight) * 2); */
+  --rowGap: 0; /* var(--lineHeight); */
   --displayScale: 1;
   --pixel: 1px;
   --foreground-color-rgb: 0, 0, 0;
